force-app/main/default/objects/Orientation__c/Orientation__c.object-meta.xml
<CustomObject>
    <label>Orientation</label>
    <nameField>
        <label>Orientation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orientations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>