force-app/main/default/objects/Orientation__c/fields/Current_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Current_Orientation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>