force-app/main/default/objects/Orientation__c/fields/Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Vacancy__c</fullName>
    <label>Vacancy</label>
    <referenceTo>deapp__Apply_now__c</referenceTo>
    <relationshipLabel>Orientations</relationshipLabel>
    <relationshipName>Orientations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>